# audit-ai

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  PLAN_M2.md  PLAN_M3.md  PROMPTS.md  README.md  SPEC_M3.md  TASKS.md  TASKS_M2.md  TASKS_M3.md  alembic.ini  compose.yaml  conftest.py  pyproject.toml  文档处理管线_本地Demo_开发文档_v0.1.md
.githooks/: post-checkout  post-merge  pre-push
.review/: findings.json
alembic/: env.py
config/: obligation.yaml  profiles.yaml  qc_thresholds.yaml  settings.toml
docs/: CP-009-仓库与升格规范.md  devlog.md  migration-manifest.md  migration_devlog.md  制度查询与制度比对智能体_RAG技术框架设计_v1.5.md  制度查询智能体_技术框架设计_v1_0.md  文档处理与语料库构建_技术框架设计_v1.6.md
eval/: pyproject.toml
eval/eval/: __init__.py  anchor_replay.py  reconcile.py
eval/tests/: .gitkeep  test_anchor_replay.py  test_finalize_verify.py  test_idempotency.py  test_rebuild.py  test_reconcile.py  test_report.py  test_smoke.py
libs/common/: pyproject.toml
libs/common/common/: __init__.py  chunk_id.py  ir.py  manifest.py  milvus_schema.py  pg_models.py
libs/common/tests/: .gitkeep  test_chunk_id.py  test_ir.py  test_v16_fidelity.py
pipeline/: pyproject.toml
pipeline/pipeline/: cli.py  config.py  llm_client.py  orchestration.py  orchestration_devlog.md  orchestrator.py  queue.py  stage_base.py  states.py
pipeline/pipeline/chunking/: case_chunker.py  chunker.py  clause_tree.py  normalize.py  profile_router.py  qa_chunker.py  ref_render.py  ref_resolver.py  structuring_devlog.md
pipeline/pipeline/enrich/: __init__.py  e1_obligation.py  e2_tag.py
pipeline/pipeline/index/: __init__.py  corpus_rows.py  index_devlog.md  milvus_io.py  pg_io.py
pipeline/pipeline/meta/: __init__.py  case_extract.py  case_l2.py  case_ref_align.py  l2_llm.py  version_chain.py
pipeline/pipeline/parsing/: factory.py  light_parser.py  mineru_parser.py  page_align.py  parsing_devlog.md  rendition.py
pipeline/pipeline/qc/: gate.py  indicators.py
pipeline/pipeline/stages/: finalize.py  s0_register.py  s1_parse.py  s2_qc.py  s3_structure.py  s4_meta.py  s5_embed_index.py
pipeline/pipeline/verify/: idempotency.py  report.py
pipeline/pipeline/web/: app.py  service.py
pipeline/pipeline/web/static/: index.html  styles.css
pipeline/tests/: .gitkeep  _ocr_gate.py  test_atomic_switch.py  test_b_mode_ingest.py  test_case_chunker.py  test_case_extract.py  test_case_l2.py  test_case_ref_align.py  test_chunker.py  test_clause_references.py  test_clause_tree.py  test_cli.py  test_corpus_rows_biz.py  test_e1_obligation.py  test_e2_tag.py  test_embedding_client.py  test_golden_set.py  test_ir_ocr_conf.py  test_l1.py  test_l2_llm.py  test_light_parser.py  test_milvus_io.py  test_milvus_search_expr.py  test_milvus_search_text.py  test_mineru_parser.py  test_normalize.py  test_object_store.py  test_obligation_golden.py  test_ocr_routing.py  test_orchestrator.py  test_pg_io.py  test_profile_router.py  test_qa_chunker.py  test_qc.py  test_qc_profile.py  test_ref_render.py  test_ref_resolver.py  test_s0_register.py  test_s1_parse.py  test_s3_structure.py  (+9 more)
pipeline/tests/fixtures/: mineru_middle_table.json  mineru_middle_toc.json
pipeline/tests/golden/: int_hetong.json  int_yinzhang.json
query/: pyproject.toml
query/query/: __init__.py  cli.py  config.py  contract.py  graph.py  observe.py  state.py
query/query/api/: __init__.py  app.py  auth.py  errors.py  export_xlsx.py  routes_clauses.py  routes_conversations.py  routes_export.py  routes_messages.py  routes_misc.py  service.py  sse.py  structured.py
query/query/case/: __init__.py  bridge.py  case_card.py  r3_case.py
query/query/change/: __init__.py  r2_change.py  version_diff.py
query/query/generate/: __init__.py  anchors.py  citation_inject.py  r1_evidence.py
query/query/judge/: __init__.py  framing.py  r5_judgment.py  review.py
query/query/listing/: __init__.py  dimensions.py  r4_listing.py
query/query/llm/: __init__.py  client.py  stub.py
query/query/refuse/: __init__.py  coverage_refusal.py
query/query/rerank/: __init__.py  reranker.py
query/query/retrieve/: __init__.py  decompose.py  hybrid.py  hyde.py  sparse_boost.py  sufficiency.py
query/query/session/: __init__.py  store.py
query/query/stats/: __init__.py  dimensions.py  r6_stats.py  sql_builder.py
query/query/understand/: __init__.py  classify.py  merge.py  router.py
query/tests/: conftest.py  test_anchors_integration.py  test_api_ask.py  test_api_clauses.py  test_api_contract.py  test_api_conversations.py  test_api_errors.py  test_api_export.py  test_api_sse.py  test_api_sse_integration.py  test_api_suggestions.py  test_api_uploads.py  test_bridge.py  test_case_card.py  test_citation_faithfulness.py  test_citation_inject.py  test_cited_regulations_bridge_contract.py  test_classify.py  test_contract.py  test_coverage_refusal.py  test_decompose.py  test_decompose_integration.py  test_dimensions.py  test_evidence_guards.py  test_framing.py  test_graph.py  test_graph_integration.py  test_hybrid_integration.py  test_hyde.py  test_hyde_integration.py  test_listing_dimensions.py  test_llm_stub.py  test_merge.py  test_merge_integration.py  test_observe.py  test_observe_integration.py  test_query_cli.py  test_query_config.py  test_query_smoke.py  test_r1_integration.py  (+25 more)
query/tests/golden/: router_golden.jsonl
seeds/: dict_aliases.csv  dict_biz_domains.csv  dict_departments.csv  dict_entity_types.csv  dict_issuers.csv  dict_scenario_terms.csv  dict_violation_types.csv
tests/: conftest.py  test_anchor_replay.py  test_atomic_switch.py  test_b_mode_ingest.py  test_chunk_id.py  test_chunker.py  test_clause_tree.py  test_cli.py  test_config.py  test_e1_obligation.py  test_embedding_client.py  test_finalize_verify.py  test_idempotency.py  test_ir.py  test_l1.py  test_light_parser.py  test_milvus_io.py  test_object_store.py  test_orchestrator.py  test_page_align.py  test_pg_io.py  test_qc.py  test_queue.py  test_rebuild.py  test_reconcile.py  test_report.py  test_s0_register.py  test_s1_parse.py  test_s3_structure.py  test_s4_meta.py  test_s5.py  test_search_meta.py  test_smoke.py  test_states.py  (+2 more)
(+158 files in other folders)
