# ── audit-ai workspace 根(原地升格中,分支 migrate/audit-ai-skeleton)──────────────────
# 本仓正从单包 demo 升格为 audit-ai monorepo。workspace 成员**只此三个**(严禁新增
# libs/rag|orchestration|doc_compare|report_gen 或 services/*——它们仅为 CP-009 约定,
# 待第一份真实代码/第二个消费方出现再创建):
[tool.audit_workspace]
members = ["libs/common", "pipeline", "eval"]
# 依赖方向:pipeline → common;eval → pipeline → common;common 不依赖任何上层。
# setuptools 无原生 workspace,成员各自 `pip install -e <member>`(见各成员 pyproject)。
# 过渡:源码暂仍在 src/pipeline(Step 2–4 用 git mv 入各成员);下面的 [project] 暂保 src-layout
# 让现有套件可装可测,Step 3 源码就位后翻为聚合根。详见 docs/migration-manifest.md。

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-doc-pipeline-demo"
version = "0.1.0"
description = "文档处理管线 · 本地 Demo(M1)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pymilvus>=2.4,<2.5",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "rapidfuzz>=3.6",
    "openpyxl>=3.1",
    "python-ulid>=2.2",
    "setuptools>=68,<81",  # 提供 pkg_resources(pymilvus 2.4 运行期需要;81+ 已移除 pkg_resources)
]

[project.optional-dependencies]
# 本地嵌入(torch,重)——仅运行 local 模式时需要;endpoint 模式不需
embed = ["FlagEmbedding>=1.2"]
# Pillow:仅测试 + tools/build_fixtures.py 构造 fixture 用(src/ 运行期不依赖);
# 此前靠 pdfplumber 传递引入,显式声明避免隐式依赖断裂。
dev = ["ruff>=0.4", "pytest>=8.0", "pypdf>=4.0", "Pillow>=10.0"]

[project.scripts]
demo = "pipeline.cli:app"
demo-web = "pipeline.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pipeline.web" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# alembic/versions 纳入 lint:autogenerate 出的迁移须跑一次
# `ruff check --fix alembic/versions && ruff format alembic/versions`(违规全可自动修)再提交。

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer 的 CLI 参数默认值本就是 Argument()/Option() 调用,非 B008 针对的可变默认值。
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.isort]
# 升格后 workspace 三成员均为本仓首方包(否则 isort 误判 common/eval 为第三方,分组错乱)。
known-first-party = ["common", "pipeline", "eval"]

[tool.pytest.ini_options]
# 过渡期:pipeline 在 src/(Step 3 后移 pipeline/),契约层 common 在 libs/common/。
pythonpath = ["src", "libs/common"]
testpaths = ["tests", "libs/common/tests"]
