# ── audit-ai workspace 根 ──────────────────────────────────────────────────────────
# 本仓为 audit-ai monorepo。workspace 成员**只此三个**(严禁新增 libs/rag|orchestration|
# doc_compare|report_gen 或 services/*——仅 CP-009 约定,待第一份真实代码/第二个消费方出现再建):
[tool.audit_workspace]
members = ["libs/common", "pipeline", "eval"]
# 依赖方向:pipeline → common;eval → pipeline → common;common 不依赖任何上层。
# setuptools 无原生 workspace;开发安装(顺序敏感,先 common):
#   pip install -e libs/common && pip install -e pipeline && pip install -e eval && pip install -e ".[dev]"
# 运行时包(demo / demo-web 脚本、运行依赖)见各成员 pyproject;根仅聚合 dev 工具 + 运维(alembic)。

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-ai"
version = "0.1.0"
description = "audit-ai monorepo workspace 根(聚合 dev 工具与共享配置;运行时包见 libs/common·pipeline·eval)"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",  # DB 迁移(运维工具,留 repo 根,决策⑧;env.py import 改向 common.pg_models)
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0", "pypdf>=4.0", "Pillow>=10.0"]

[tool.setuptools]
# 根不分发任何包(成员各自打包);显式空,阻止 setuptools 自动发现 pipeline/libs/eval/tests。
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
# alembic/versions 纳入 lint:autogenerate 出的迁移须跑一次
# `ruff check --fix alembic/versions && ruff format alembic/versions`(违规全可自动修)再提交。

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer 的 CLI 参数默认值本就是 Argument()/Option() 调用,非 B008 针对的可变默认值。
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.isort]
# 升格后 workspace 三成员均为本仓首方包(否则 isort 误判 common/eval 为第三方,分组错乱)。
known-first-party = ["common", "pipeline", "eval"]

[tool.pytest.ini_options]
# pipeline 包在 pipeline/(import 名 pipeline);契约层 common 在 libs/common/。
# 过渡:pipeline 单测暂留 tests/(Step 4 与 verify 一起共置到各包);契约 pin 在 libs/common/tests。
pythonpath = ["pipeline", "libs/common", "eval"]
testpaths = ["tests", "libs/common/tests", "eval/tests"]
