# ── audit-ai workspace 根 ──────────────────────────────────────────────────────────
# 本仓为 audit-ai monorepo。workspace 成员四个:query 为制度查询智能体(功能1)——CP-009
# 「成员待第一份真实代码/第二个消费方出现再建」条件已满足(query 即第二消费方)。仍严禁凭空
# 新增 libs/rag|orchestration|doc_compare|report_gen 或 services/*(无真实代码不建):
[tool.audit_workspace]
members = ["libs/common", "pipeline", "eval", "query"]
# 依赖方向:pipeline → common;eval → pipeline → common;query → pipeline → common;common 不依赖任何上层。
# setuptools 无原生 workspace;开发安装(顺序敏感,先 common):
#   pip install -e libs/common && pip install -e pipeline && pip install -e eval && pip install -e query && pip install -e ".[dev]"
# 运行时包(demo / demo-web 脚本、运行依赖)见各成员 pyproject;根仅聚合 dev 工具 + 运维(alembic)。

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-ai"
version = "0.1.0"
description = "audit-ai monorepo workspace 根(聚合 dev 工具与共享配置;运行时包见 libs/common·pipeline·eval)"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",  # DB 迁移(运维工具,留 repo 根,决策⑧;env.py import 改向 common.pg_models)
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0", "pypdf>=4.0", "Pillow>=10.0"]

[tool.setuptools]
# 根不分发任何包(成员各自打包);显式空,阻止 setuptools 自动发现 pipeline/libs/eval/tests。
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
# alembic/versions 纳入 lint:autogenerate 出的迁移须跑一次
# `ruff check --fix alembic/versions && ruff format alembic/versions`(违规全可自动修)再提交。

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer CLI 参数、FastAPI 依赖注入默认值本就是 Argument()/Depends() 等调用,非 B008 针对的可变默认值。
extend-immutable-calls = [
    "typer.Argument", "typer.Option",
    "fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.File", "fastapi.Form",
]

[tool.ruff.lint.isort]
# 升格后 workspace 三成员均为本仓首方包(否则 isort 误判 common/eval 为第三方,分组错乱)。
known-first-party = ["common", "pipeline", "eval", "query"]

[tool.pytest.ini_options]
# 各成员 import 根:pipeline/(pipeline)、libs/common/(common)、eval/(eval)、query/(query)。
# 测试按包共置(决策⑦):pipeline/tests、libs/common/tests、eval/tests、query/tests;共享 fixtures 在 repo 根 conftest.py。
pythonpath = ["pipeline", "libs/common", "eval", "query"]
testpaths = ["pipeline/tests", "libs/common/tests", "eval/tests", "query/tests"]
